update tag translation now can run as a normal task
