# server/task.ts
@@ -2,6 +2,7 @@ import type { Task } from "../task.ts";
 import type { TaskEventData } from "../task_manager.ts";
 import type { DownloadConfig } from "../tasks/download.ts";
 import type { ExportZipConfig } from "../tasks/export_zip.ts";
+import type { UpdateTagTranslationConfig } from "../tasks/update_tag_translation.ts";
 import type { DiscriminatedUnion } from "../utils.ts";
 
 export type TaskServerSocketData =
@@ -22,6 +23,7 @@ type EventMap = {
         cfg?: DownloadConfig;
     };
     new_export_zip_task: { gid: number | bigint; cfg?: ExportZipConfig };
+    new_update_tag_translation_task: { cfg?: UpdateTagTranslationConfig };
 };
 
 export type TaskClientSocketData =
